fix:解决【29601】【X86】【安装器】【桌面版】【v5.3.1+c4】【语言选择】滚动条表现不一致 Log：因为样式表中QScrollBar未指定父对象QScrollArea导致该问题，指定后问题解决 Bug：https://pms.uniontech.com/zentao/bug-view-29601.html

--- a/src/ui/styles/select_language_frame.css
+++ b/src/ui/styles/select_language_frame.css
@@ -21,7 +21,7 @@ QCheckBox::indicator {
   height: 16px;
 }
 
-QScrollBar:vertical
+QScrollArea#QScrollBar:vertical
 {
     width:8px;
     background:rgba(0,0,0,0%);
@@ -29,14 +29,14 @@ QScrollBar:vertical
     padding-top:9px;
     padding-bottom:9px;
 }
-QScrollBar::handle:vertical
+QScrollArea#QScrollBar::handle:vertical
 {
     width:8px;
     background:rgba(0,0,0,25%);
     border-radius:4px;
     min-height:20;
 }
-QScrollBar::handle:vertical:hover
+QScrollArea#QScrollBar::handle:vertical:hover
 {
     width:8px;
     background:rgba(0,0,0,50%);
@@ -44,14 +44,14 @@ QScrollBar::handle:vertical:hover
     min-height:20;
 }
 
-QScrollBar::add-line:vertical {
+QScrollArea#QScrollBar::add-line:vertical {
     border: 0px;
     width: 0px;
     subcontrol-position: top;
     subcontrol-origin: margin;
 }
 
-QScrollBar::sub-line:vertical {
+QScrollArea#QScrollBar::sub-line:vertical {
     border: 0px;
     width: 0px;
     subcontrol-position: bottom;
